# fast-api-project

./: Dockerfile  Jenkinsfile  Jenkinsfile-DB-Migrations  PERFORMANCE_IMPROVEMENTS_PR1.md  README.md  REFACTORING_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  test.toml
alembic/: env.py
alembic/versions/: 27adbd86857b_merge_migration_heads.py  34d124c7aefd_initial.py  3c37170e422f_remove_assembly_versions.py  47dc7a1f9531_add_partner_sales_channels.py  493bb38d2ed4_all_partner_cutoffs_required.py  4ad501235c58_add_blue_apron_sales_channels.py  5a635b230eb8_add_partner_assembly_option_tables.py  5c175b9ee5d9_add_externally_created_to_recipes_table.py  5cef832932b3_add_brands_to_partners.py  69085d3f1d6b_add_idempotency_keys_table.py  6ba0b75a1d0c_recipe_plan_data.py  73bce4dc410e_update_brands_to_partner_brands_table_.py  752e206da48c_add_assembly_tables.py  7cd1b2cf7ea2_add_culops_product_sku_to_the_recipe_.py  9313bb87f435_insert_ba_cost_markup.py  a6eb2a9363bb_add_ba_tags.py  c67085d9fbd1_update_to_single_tag_type_category_enum_.py  c7ee01ead83d_add_partner_data.py  cfffbcaaf1e0_add_recipe_tables.py  ed6ea01230ed_remove_vendor_name_from_pantry_items_.py  f229c37e80b2_update_cabinet_plan_id_data_type.py  fba7c49090d9_merge_heads.py
helm/recipes-api-service/: Chart.yaml  requirements.yaml  values.yaml
infra/: aurora.tf  iam.tf  outputs.tf  production.hcl  production.tfvars  providers.tf  random_password.tf  security-group.tf  ssm.tf  staging.hcl  staging.tfvars  variables.tf
scripts/: build.sh
src/: main.py  token_refresh_main.py
src/api/: health.py  router.py
src/core/: config.py  constants.py  datadog_init.py  exception_handlers.py  exceptions.py  rollbar_init.py
src/db/: assembly_repo.py  idempotency_key_repo.py  models.py  pantry_repo.py  partner_repo.py  recipes_repo.py  repo_base.py  schema.py
src/dependancies/: cabinet_client.py  culops_client.py  fulfillment_client.py  fulfillment_producer.py  fulfillment_response_producer.py  idempotency_db.py  order_service.py  pantry_db.py  param_store_client.py  partner_db.py  partner_service.py  recipe_db.py  recipe_service.py  token_service.py
src/interfaces/: assembly_interface.py  cabinet_client_interface.py  culops_client_interface.py  fulfillment_engine_client_interface.py  fulfillment_producer_interface.py  fulfillment_response_producer_interface.py  idempotency_key_repo_interface.py  order_service_interface.py  pantry_db_interface.py  param_store_client_interface.py  partner_repo_interface.py  partner_service_interface.py  recipe_service_interface.py  recipes_repo_interface.py  token_service_interface.py
src/services/: order.py  pantry.py  partner.py  recipe.py  token.py
src/token_manager/: models.py  service.py
src/utils/: datetime_helper.py  generate_pantry_mocks.py  logger.py  logger_context.py  paginator.py  singleton.py  task_scheduler.py  validation.py
tests/: conftest.py
tests/api/: test_health.py
tests/db/: test_assembly_repo.py  test_data.py  test_idempotency_key_repo.py  test_pantry_repo.py  test_partner_repo.py  test_recipes_repo.py
(+71 files in other folders)
